--- a/app/views/name_space1/type011_articles/_show.html.slim
+++ b/app/views/name_space1/type011_articles/_show.html.slim
@@ -1,17 +1,11 @@
-.page-header
-  h2= current_record.title
 ul
   - current_record.type011_comments.each do |e|
     li= e.comment
 
-= form_with(:model => [controller.class.parent_name.underscore, current_record], html: {class: "form-horizontal"}, :local => true) do |form|
+= form_with(:model => [controller.class.parent_name.underscore, current_record], html: {class: "form-inline"}, :local => true) do |form|
   = render partial: "error_messages", locals: {form: form}
-  / 新規書き込み
+  = hidden_field_tag :redirect_to_where, request.url
   = form.fields_for(:type011_comments, form.object.type011_comments.build) do |form|
     .form-group
-      = form.label(:comment_new, :class => "col-sm-2 control-label")
-      .col-sm-10
-        = form.text_field(:comment, class: "form-control")
-  .form-group
-    .col-sm-offset-2.col-sm-10
-      =<> form.submit("更新", class: "btn btn-primary")
+      =<> form.text_field(:comment, class: "form-control")
+      =<> form.submit("発言", class: "btn btn-primary")
