商品画像の位置名をshowで出すのは冗長

--- a/app/views/name_space1/type010_articles/_show.html.slim
+++ b/app/views/name_space1/type010_articles/_show.html.slim
@@ -5,6 +5,6 @@
        .thumbnail
          = image_tag(e.pixer.url)
          .caption
-           .h3= current_model.human_attribute_name(key) + "側"
-           p
-             = e.name
+           .h3= e.name
+           / p
+           /   = e.name
