--- a/app/views/name_space1/type009_articles/_form.html.slim
+++ b/app/views/name_space1/type009_articles/_form.html.slim
@@ -6,9 +6,6 @@
 
 / ファイル
 .form-group
-  = form.label(:up_files, :class => "col-sm-2 control-label")
+  = form.label(:type009_attachment_files, class: "col-sm-2 control-label")
   .col-sm-10
-    / フォームを multipart にするための裏技
-    = form.file_field("__dummy_file_field__", :disabled => true, :style => "display:none")
-    / トップレベルで定義
-    = file_field_tag("up_files[]", :class => "form-control", :multiple => true)
+    = form.file_field("up_files", :class => "form-control", :multiple => true)
