--- a/app/views/name_space1/type005_articles/_confirm.html.slim
+++ b/app/views/name_space1/type005_articles/_confirm.html.slim
@@ -17,10 +17,10 @@
             - form.object.persisted_type005_files.each do |e|
               li
                 - if controller.current_delete_ids.include?(e.id)
-                  = image_tag(e.pixer.url, :height => 64, :class => "img-rounded")
+                  = image_tag(e.media_file.url, :height => 64, :class => "img-rounded")
                   span.label.label-warning= "削除"
                 - else
-                  = image_tag(e.pixer.url, :height => 128, :class => "img-rounded")
+                  = image_tag(e.media_file.url, :height => 128, :class => "img-rounded")
                   span.label.label-info= "保持"
 
         - if form.object.temp_type005_files.present?
@@ -29,10 +29,10 @@
             - form.object.temp_type005_files.each do |e|
               li
                 - if controller.current_reject_codes.include?(e.pixer_cache)
-                  = image_tag(e.pixer.url, :height => 64, :class => "img-rounded")
+                  = image_tag(e.media_file.url, :height => 64, :class => "img-rounded")
                   span.label.label-warning= "削除"
                 - else
-                  = image_tag(e.pixer.url, :height => 128, :class => "img-rounded")
+                  = image_tag(e.media_file.url, :height => 128, :class => "img-rounded")
                   span.label.label-success= "追加"
 
         - if form.object.type005_files_all_remove?
