--- a/app/views/name_space1/type004_articles/_form.html.slim
+++ b/app/views/name_space1/type004_articles/_form.html.slim
@@ -1,13 +1,13 @@
 / ファイル
 .form-group
-  = form.label(:pixer, :class => "col-sm-2 control-label")
+  = form.label(:media_file, :class => "col-sm-2 control-label")
   .col-sm-10
     = form.hidden_field(:pixer_cache)
-    = form.file_field(:pixer, :class => "form-control")
-    - if form.object.pixer?
+    = form.file_field(:media_file, :class => "form-control")
+    - if form.object.media_file?
       .help-block
         = "アップロード済みファイル"
-        = image_tag(form.object.pixer.url, :height => 64, :class => "img-rounded")
+        = image_tag(form.object.media_file.url, :height => 64, :class => "img-rounded")
 
 / コメント
 .form-group
@@ -16,7 +16,7 @@
     = form.text_field(:comment, :class => "form-control")
 
 / 削除
-- if form.object.pixer?
+- if form.object.media_file?
   .form-group
     = form.label(:remove_pixer, :class => "col-sm-2 control-label")
     .col-sm-10
