--- a/app/views/name_space1/type004_articles/_show.html.slim
+++ b/app/views/name_space1/type004_articles/_show.html.slim
@@ -1,32 +1,32 @@
-- if current_record.pixer?
+- if current_record.media_file?
   .row
     .col-md-12
-      - if current_record.pixer.content_type.match?(/image/)
-        = image_tag(current_record.pixer.url, :class => "img-thumbnail")
-      - elsif current_record.pixer.content_type.match?(/video|mp4/)
-        = video_tag(current_record.pixer.url, :class => "img-thumbnail", :controls => true)
-      - elsif current_record.pixer.content_type.match?(/audio/)
-        = audio_tag(current_record.pixer.url)
-      - elsif current_record.pixer.content_type.start_with?("text")
+      - if current_record.media_file.content_type.match?(/image/)
+        = image_tag(current_record.media_file.url, :class => "img-thumbnail")
+      - elsif current_record.media_file.content_type.match?(/video|mp4/)
+        = video_tag(current_record.media_file.url, :class => "img-thumbnail", :controls => true)
+      - elsif current_record.media_file.content_type.match?(/audio/)
+        = audio_tag(current_record.media_file.url)
+      - elsif current_record.media_file.content_type.start_with?("text")
         pre
-          = open(current_record.pixer.path, &:read)
+          = open(current_record.media_file.path, &:read)
       - else
-        = link_to(current_record.pixer.filename, asset_path(current_record.pixer.url))
+        = link_to(current_record.media_file.filename, asset_path(current_record.media_file.url))
   .row
     .col-md-12
       .label.label-default= "URL"
-      pre= link_to(asset_url(current_record.pixer.url), asset_path(current_record.pixer.url))
+      pre= link_to(asset_url(current_record.media_file.url), asset_path(current_record.media_file.url))
   .row
     .col-md-12
-      .label.label-default= "pixer inspect"
-      = debug current_record.pixer
+      .label.label-default= "media_file inspect"
+      = debug current_record.media_file
   .row
     .col-md-12
       .label.label-default= "image_tag"
-      p= image_tag(current_record.pixer.url, :class => "img-thumbnail")
+      p= image_tag(current_record.media_file.url, :class => "img-thumbnail")
 
       .label.label-default= "video_tag"
-      p= video_tag(current_record.pixer.url, :class => "img-thumbnail", :controls => true)
+      p= video_tag(current_record.media_file.url, :class => "img-thumbnail", :controls => true)
 
       .label.label-default= "audio_tag"
-      p= audio_tag(current_record.pixer.url)
+      p= audio_tag(current_record.media_file.url)
