--- a/app/views/name_space1/type004_articles/_form.html.slim
+++ b/app/views/name_space1/type004_articles/_form.html.slim
@@ -2,7 +2,7 @@
 .form-group
   = form.label(:media_file, :class => "col-sm-2 control-label")
   .col-sm-10
-    = form.hidden_field(:pixer_cache)
+    = form.hidden_field(:media_file_cache)
     = form.file_field(:media_file, :class => "form-control")
     - if form.object.media_file?
       .help-block
@@ -18,7 +18,7 @@
 / 削除
 - if form.object.media_file?
   .form-group
-    = form.label(:remove_pixer, :class => "col-sm-2 control-label")
+    = form.label(:remove_media_file, :class => "col-sm-2 control-label")
     .col-sm-10
       label.checkbox-inline
-        = form.check_box(:remove_pixer) + "削除する"
+        = form.check_box(:remove_media_file) + "削除する"
