--- a/app/views/name_space1/type007_articles/_form.html.slim
+++ b/app/views/name_space1/type007_articles/_form.html.slim
@@ -8,5 +8,5 @@
 .form-group
   label.col-md-2.control-label= "曜日"
   .col-md-10
-    = form.collection_check_boxes(:temp_seven_day_ids, SevenDay.all, :id, :name) do |b|
+    = form.collection_check_boxes(:temp_team_ids, Team.all, :id, :name) do |b|
       = b.label(:class => "checkbox-inline", :for => nil) { b.check_box + b.text }
