GoogleMapのマーカーやらサークルやらを使ってみた

--- a/app/views/application/show.html.slim
+++ b/app/views/application/show.html.slim
@@ -2,7 +2,7 @@
   .page-header
     h2= controller.page_header_show_title
 
-= render :partial => "show"
+= render :partial => params[:show_partial] || "show"
 
 p
   .panel.panel-default
