Gmail経由でメールが送れない→修正

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -31,4 +31,5 @@ html lang="ja"
     footer
       .container-fluid
         p= link_to("TOP", :root)
+        p= link_to("メールプレビュー", "/rails/mailers")
         p= "Powered by Rails #{Rails.version} and Ruby #{RUBY_VERSION}"
