type018 パスワード再設定機能追加

--- a/app/views/name_space1/type018_homes/show.html.slim
+++ b/app/views/name_space1/type018_homes/show.html.slim
@@ -1,5 +1,7 @@
 .page-header
   h2
-    = "#{current_user.id}のホーム"
+    = "#{current_type018_user.id}のホーム"
 
-= link_to("ログアウト", [:name_space1, :type018_session], :method => :delete)
+ul.nav.nav-pills
+  li= link_to("ログアウト", [:name_space1, :type018_session], :method => :delete)
+  li= link_to("PWリセット", [:new, :name_space1, :type018_password_reseter])
