お絵描きキャンバスの描画時にマウスボタン押しっぱで加算描画にするテスト

--- a/app/views/name_space1/type023_chat_rooms/show.html.slim
+++ b/app/views/name_space1/type023_chat_rooms/show.html.slim
@@ -1,2 +1,2 @@
-/ canvas#mycanvas style="background:black; width: 70vw; height: 70vh" data-color="#{'#%06x' % rand(256 * 256 * 256)}"
-canvas#mycanvas width="800" height="600" style="background:black" data-color="#{'#%06x' % rand(256 * 256 * 256)}"
+/ canvas#chat_room_canvas style="background:black; width: 70vw; height: 70vh" data-color="#{'#%06x' % rand(256 * 256 * 256)}"
+canvas#chat_room_canvas width="1536" height="640" style="background:black" data-color="#{'#%06x' % rand(256 * 256 * 256)}"
