--- a/app/views/name_space1/type011_articles/show.html.slim
+++ b/app/views/name_space1/type011_articles/show.html.slim
@@ -3,6 +3,6 @@
 
 = render :partial => "show"
 hr
-=<> link_to("一覧", [controller.class.parent_name.underscore, current_plural_key], :class => "btn btn-default")
+=<> link_to("一覧", [:name_space1, current_plural_key], :class => "btn btn-default")
 - if controller.respond_to_destroy?
-  =<> link_to("削除", [controller.class.parent_name.underscore, current_record], :method => :delete, :data => {:confirm => "本当に削除してもよろしいですか？"}, :class => "btn btn-danger")
+  =<> link_to("削除", [:name_space1, current_record], :method => :delete, :data => {:confirm => "本当に削除してもよろしいですか？"}, :class => "btn btn-danger")
