--- a/app/views/frontend/type027_article.html.slim
+++ b/app/views/frontend/type027_article.html.slim
@@ -8,17 +8,18 @@
     a.btn.btn-danger.btn-xs @click="mondai_reset_click" =<> "リセット"
     a.btn.btn-primary @click="mondai_next_click" =<> "つぎへ"
 
-  p
-    =<> "{{mondai_index}} / {{mondai_all.length}}"
+  div v-if="mondai_all.length >= 1"
+    p=<> "{{mondai_index}} / {{mondai_all.length}}"
 
-  / bootstrap の progress は綺麗だけど幅の指定が難しい
-  .progress.progress-striped
-    .progress-bar.progress-bar-info v-bind:style="mondai_progress_bar_width()" = "{{mondai_index / mondai_all.length}}"
+    / bootstrap の progress は綺麗だけど幅の指定が難しい
+    .progress.progress-striped
+      .progress-bar.progress-bar-info v-bind:style="mondai_progress_bar_width()" = "{{mondai_index / mondai_all.length}}"
 
-  progress v-bind:value="mondai_index / mondai_all.length" style="width: 50vw"
+    progress v-bind:value="mondai_index / mondai_all.length" style="width: 50vw"
 
-  .panel.panel-primary @click="mondai_next_click"
-    .panel-body
-      p.text-center style="font-size: 16em" = "{{mondai_one}}"
+    div v-if="mondai_one"
+      .panel.panel-primary @click="mondai_next_click"
+        .panel-body
+          p.text-center style="font-size: 16em" = "{{mondai_one}}"
 
 
