AJAXのサンプル029追加

--- a/app/views/application/show.html.slim
+++ b/app/views/application/show.html.slim
@@ -2,7 +2,8 @@
   .page-header
     h2= controller.page_header_show_title
 
-= render :partial => params[:show_partial] || "show"
+#show_partial_div_for_ajax
+  = render :partial => params[:show_partial] || "show"
 
 p
   .panel.panel-default
