--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,6 +27,11 @@ html lang="ja"
             = link_to(AppConfig[:app_name], :root, class: "navbar-brand")
           #navbar.navbar-collapse.collapse
             ul.nav.navbar-nav
+                li= link_to("左1", "#")
+                li= link_to("左2", "#")
+            ul.nav.navbar-nav.navbar-right
+                li= link_to("右1", "#")
+                li= link_to("右2", "#")
     .container-fluid
       = bootstrap_flash
       = yield
