AJAXスライダーの例を改善

--- a/app/views/name_space1/type029_articles/_show.html.slim
+++ b/app/views/name_space1/type029_articles/_show.html.slim
@@ -1,22 +1,31 @@
-/ 1. Rails の remote: true で _show をまるごと更新
-p
-  =<> current_record.show_counter
-  =<> link_to("+1", [:name_space1, current_record], class: "btn btn-default")
-  =<> link_to("+1 (AJAX)", [:name_space1, current_record], class: "btn btn-default", remote: true)
+.page-header
+  h4= "1. remote: true で params 確認。一部だけ更新(追加)する例。ajax_params_inspector は via: :all なのですべてに反応できる"
 
-/ 2. Rails の remote: true で params 確認
-p
-  = "一部だけ更新(追加)する例。ajax_action_sample は via: :all なのですべてに反応できる"
-  =<> link_to("POST",   [:ajax_action_sample, :name_space1, current_record], class: "btn btn-default", remote: true, method: :post)
-  =<> link_to("PUT",    [:ajax_action_sample, :name_space1, current_record], class: "btn btn-default", remote: true, method: :put)
-  =<> link_to("DELETE", [:ajax_action_sample, :name_space1, current_record], class: "btn btn-default", remote: true, method: :delete)
-  =<> link_to("GET",    [:ajax_action_sample, :name_space1, current_record], class: "btn btn-default", remote: true)
-  #ajax_action_sample_update_div= ""
+=<> link_to("POST",   [:ajax_params_inspector, :name_space1, current_record], class: "btn btn-default", remote: true, method: :post)
+=<> link_to("PUT",    [:ajax_params_inspector, :name_space1, current_record], class: "btn btn-default", remote: true, method: :put)
+=<> link_to("DELETE", [:ajax_params_inspector, :name_space1, current_record], class: "btn btn-default", remote: true, method: :delete)
+=<> link_to("GET",    [:ajax_params_inspector, :name_space1, current_record], class: "btn btn-default", remote: true)
+#ajax_params_inspector_update_div= ""
 
-/ 3. スライダーが動き終わったときに $.ajax して ajax_action_sample_update_div にパラメータを出力する
-p
-  form
-    = hidden_field_tag("hidden_value", 123)
-    = range_field_tag("slider_value", 0, id: "type029_slider", data: {url: url_for([:ajax_action_sample, :name_space1, current_record])})
-p
-  = current_record.attributes.to_quick_table
+.page-header
+  h4= "2. remote: true と show.js.coffee を置くことで  _show.html.slim をまるごと更新"
+
+=<> current_record.show_counter
+=<> link_to("+1", [:name_space1, current_record], class: "btn btn-default")
+=<> link_to("+1 (AJAX)", [:name_space1, current_record], class: "btn btn-default", remote: true)
+
+.page-header
+  h4= "3. ほぼRails標準機能だけでスライダーを通知する例。jQuery が change に反応して隠し submit をクリックする"
+= form_with(url: [:ajax_params_inspector, :name_space1, current_record], local: false) do |form|
+  = range_field_tag("slider_value", 0, id: "type029_slider_hidden_submit_click")
+  = form.submit("AJAX", class: "btn btn-default", style: "display:none")
+
+.page-header
+  h4= "4. 3を自力で行う例($.ajax を使う)"
+form
+  = hidden_field_tag("hidden_value", 123)
+  = range_field_tag("slider_value", 0, id: "type029_slider_jquery_ajax_call", data: {url: url_for([:ajax_params_inspector, :name_space1, current_record])})
+
+hr
+  p= Time.current
+  p= current_record.attributes.to_quick_table
