--- a/app/views/name_space1/type010_articles/_show.html.slim
+++ b/app/views/name_space1/type010_articles/_show.html.slim
@@ -5,6 +5,6 @@
        .thumbnail
          = image_tag(e.media_file.url)
          .caption
-           .h3= e.name
+           h3= e.name
            / p
            /   = e.name
