--- a/app/views/name_space1/type018_password_reseters/_form.html.slim
+++ b/app/views/name_space1/type018_password_reseters/_form.html.slim
@@ -8,6 +8,6 @@
     .col-sm-10
       p.form-control-static= form.object.type018_user.email
 .form-group
-  = form.label(:atarasii_password, class: "col-sm-2 control-label")
+  = form.label(:second_password, class: "col-sm-2 control-label")
   .col-sm-10
-    = form.text_field(:atarasii_password, class: "form-control")
+    = form.text_field(:second_password, class: "form-control")
