--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,19 +27,34 @@ html lang="ja"
               span.icon-bar
             = link_to(AppConfig[:app_name], :root, class: "navbar-brand")
           #navbar.navbar-collapse.collapse
+
+            / プルダウンの例(コピペで増やせる)
+            ul.nav.navbar-nav
+              li.dropdown
+                = link_to("テンプレート#{content_tag(:span, '', class: 'caret')}".html_safe, "#", class: "dropdown-toggle", data: {toggle: "dropdown"}, role: "button", "aria-expanded" => "false")
+                ul.dropdown-menu role="menu"
+                    li= link_to("A")
+                    li.active= link_to("B")
+                    li= link_to("C")
+
+            / ボタンの配置
+            .navbar-right
+              = link_to("ボタン", "#", class: "btn btn-info navbar-btn")
+
+            / 各テキストやリンクの配置例
             p.navbar-text= "左テ1"
             p.navbar-text= "左テ2"
             ul.nav.navbar-nav
-                li= link_to("左1", "#")
-                li= link_to("左2", "#")
+                li= link_to("左1")
+                li= link_to("左2")
             p.navbar-text= "左テ3"
             p.navbar-text= "左テ4"
             .navbar-right
               p.navbar-text= "右テ3"
               p.navbar-text= "右テ4"
             ul.nav.navbar-nav.navbar-right
-                li= link_to("右1", "#")
-                li= link_to("右2", "#")
+                li= link_to("右1")
+                li= link_to("右2")
             .navbar-right
               p.navbar-text= "右テ1"
               p.navbar-text= "右テ2"
