bootstrap を yarn で管理する方法に変更

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,9 +1,9 @@
+//= require bootstrap/dist/css/bootstrap
+//= require bootstrap/dist/css/bootstrap-theme
+
 //= require quick_table/control
 //= require_tree .
 //= require_self
-
-/* @import "compass/utilities"
-/* @import "compass/css3"
 
 footer
   margin-top: 30px
@@ -14,4 +14,3 @@ footer
   // +box-shadow(inset 0 5px 15px rgba(0, 0, 0, 0.025))
   p
     color: #555
-
