--- a/app/views/tops/show.html.slim
+++ b/app/views/tops/show.html.slim
@@ -1,7 +1,8 @@
-.jumbotron
-  h1= "フォームテンプレート"
-  p= "WEBサイトを高速に開発するための雛型集"
-
-.page-header
-  h3= "フォームロジック"
+/ .jumbotron
+/   h1= "フォームテンプレート"
+/   p= "WEBサイトを高速に開発するための雛型集"
+/ .page-header
+/   h3= "フォームロジック"
 = LuckyBeast.to_html(self)
+
+/ = google_url("xxx")
