--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,7 +1,7 @@
 //= require bootstrap/dist/css/bootstrap
 //= require bootstrap/dist/css/bootstrap-theme
 
-//= require quick_table/control
+//= require html_format/control
 //= require_tree .
 //= require_self
 
