--- a/app/views/name_space1/type004_articles/_crud_debug.html.slim
+++ b/app/views/name_space1/type004_articles/_crud_debug.html.slim
@@ -1,6 +1,6 @@
 - if Rails.env.development?
-  = params.to_h.to_quick_table(title: "params の内容")
+  = params.to_h.to_html(title: "params の内容")
   - if respond_to?(:current_record)
-    = current_record.attributes.to_quick_table(title: "オブジェクトの内容")
-    = session[current_single_key].to_h.to_quick_table(title: "セッションに保存したフォーム内容")
-    = [:media_file_cache, :media_file?, :media_file_url, :remove_media_file?].inject({}) {|a, e| a.merge(e => current_record.send(e)) }.to_quick_table(title: "画像")
+    = current_record.attributes.to_html(title: "オブジェクトの内容")
+    = session[current_single_key].to_h.to_html(title: "セッションに保存したフォーム内容")
+    = [:media_file_cache, :media_file?, :media_file_url, :remove_media_file?].inject({}) {|a, e| a.merge(e => current_record.send(e)) }.to_html(title: "画像")
