--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -11,3 +11,6 @@ footer
   // +box-shadow(inset 0 5px 15px rgba(0, 0, 0, 0.025))
   p
     color: #555
+
+body > .container-fluid
+  min-height: 640px
