--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -36,20 +36,22 @@ html lang="ja"
               li.dropdown
                 = link_to("テンプレート#{content_tag(:span, '', class: 'caret')}".html_safe, "#", class: "dropdown-toggle", data: {toggle: "dropdown"}, role: "button", "aria-expanded" => "false")
                 ul.dropdown-menu role="menu"
-                    li= link_to("A")
-                    li.active= link_to("B")
-                    li= link_to("C")
+                  li= link_to("A")
+                  li.active= link_to("B")
+                  li= link_to("C")
 
             / ボタンの配置
             .navbar-right
-              = link_to("ボタン", "#", class: "btn btn-info navbar-btn")
+              = link_to("右ボタン", "#", class: "btn btn-info navbar-btn")
+            .navbar-left
+              = link_to("左ボタン", "#", class: "btn btn-info navbar-btn")
 
             / 各テキストやリンクの配置例
             p.navbar-text= "左テ1"
             p.navbar-text= "左テ2"
             ul.nav.navbar-nav
-                li= link_to("左1")
-                li= link_to("左2")
+              li= link_to("左1")
+              li= link_to("左2")
             p.navbar-text= "左テ3"
             p.navbar-text= "左テ4"
             .navbar-right
